; ModuleID = '/home/carl/AnghaBench/toxcore/auto_tests/extr_tox_test.c_handle_custom_packet.c'
source_filename = "/home/carl/AnghaBench/toxcore/auto_tests/extr_tox_test.c_handle_custom_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TOX_MAX_CUSTOM_PACKET_SIZE = common dso_local global i64 0, align 8
@custom_packet = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Custom packet fail. %u\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @handle_custom_packet(i32* %0, i32 %1, i32* %2, i64 %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i64 %3, i64* %9, align 8
  store i8* %4, i8** %10, align 8
  %14 = load i8*, i8** %10, align 8
  %15 = bitcast i8* %14 to i32*
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %11, align 4
  %17 = load i64, i64* %9, align 8
  %18 = load i64, i64* @TOX_MAX_CUSTOM_PACKET_SIZE, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %5
  br label %40

21:                                               ; preds = %5
  %22 = load i64, i64* %9, align 8
  %23 = call i8* @llvm.stacksave()
  store i8* %23, i8** %12, align 8
  %24 = alloca i32, i64 %22, align 16
  store i64 %22, i64* %13, align 8
  %25 = load i32, i32* %11, align 4
  %26 = load i64, i64* %9, align 8
  %27 = call i32 @memset(i32* %24, i32 %25, i64 %26)
  %28 = load i32*, i32** %8, align 8
  %29 = load i64, i64* %9, align 8
  %30 = call i64 @memcmp(i32* %24, i32* %28, i64 %29)
  %31 = icmp eq i64 %30, 0
  br i1 %31, label %32, label %35

32:                                               ; preds = %21
  %33 = load i32, i32* @custom_packet, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* @custom_packet, align 4
  br label %38

35:                                               ; preds = %21
  %36 = load i32, i32* %11, align 4
  %37 = call i32 @ck_abort_msg(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %36)
  br label %38

38:                                               ; preds = %35, %32
  %39 = load i8*, i8** %12, align 8
  call void @llvm.stackrestore(i8* %39)
  br label %40

40:                                               ; preds = %38, %20
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memset(i32*, i32, i64) #2

declare dso_local i64 @memcmp(i32*, i32*, i64) #2

declare dso_local i32 @ck_abort_msg(i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
